Looked into HLS4ML for our model

--- a/notebooks/onnx_to_hls_attempt.ipynb
+++ b/notebooks/onnx_to_hls_attempt.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -39,21 +39,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = hls4ml.utils.config_from_onnx_model(\"yoloc5_half_export.onnx\", granularity='name')\n"
+    "import onnx2keras\n",
+    "import onnx"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Volume in drive C is Windows-SSD\n",
+      " Volume Serial Number is 60C1-BEC3\n",
+      "\n",
+      " Directory of c:\\Users\\perez\\OneDrive\\Documents\\GitHub\\Yolo\\weights\n",
+      "\n",
+      "04/07/2024  03:39 PM    <DIR>          .\n",
+      "04/07/2024  05:21 PM    <DIR>          ..\n",
+      "04/05/2024  03:54 PM        28,520,629 best (1).onnx\n",
+      "04/05/2024  04:15 PM                27 obj.names\n",
+      "04/06/2024  01:13 PM             2,083 yolov3-tiny-custom (1).cfg\n",
+      "03/10/2024  04:41 PM             2,084 yolov3-tiny-custom.cfg\n",
+      "03/06/2024  05:02 PM        34,723,476 yolov3-tiny-custom_best (4).weights\n",
+      "03/21/2024  03:32 PM        34,741,956 yolov3-tiny-custom_best (5).weights\n",
+      "04/07/2024  03:37 PM        34,741,956 yolov3_tiny_5_gestures.weights\n",
+      "04/06/2024  01:00 PM        14,095,739 yolov5_half_export.onnx\n",
+      "04/07/2024  01:38 PM        28,121,436 YOLOv5_keras_three_gestures_17.onnx\n",
+      "04/06/2024  12:55 PM        14,236,904 YOLOv5_three_gestures.pt\n",
+      "04/07/2024  01:42 PM        28,134,225 YOLOv5_three_gestures_int8_12.onnx\n",
+      "              11 File(s)    217,320,515 bytes\n",
+      "               2 Dir(s)  177,212,043,264 bytes free\n"
+     ]
+    }
+   ],
    "source": [
-    "import onnx2keras\n",
-    "import onnx"
+    "!dir"
    ]
   },
   {
@@ -211,6 +238,8 @@
       "DEBUG:onnx2keras:Found weight /model.24/Constant_19_output_0 with shape ().\n",
       "DEBUG:onnx2keras:Found weight /model.24/Constant_22_output_0 with shape (1, 3, 2, 2, 2).\n",
       "DEBUG:onnx2keras:Found weight /model.24/Constant_23_output_0 with shape (3,).\n",
+      "c:\\Users\\perez\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\layers\\core\\input_layer.py:25: UserWarning: Argument `input_shape` is deprecated. Use `shape` instead.\n",
+      "  warnings.warn(\n",
       "DEBUG:onnx2keras:Found input images with shape [3, 64, 64]\n",
       "DEBUG:onnx2keras:######\n",
       "DEBUG:onnx2keras:...\n",
@@ -240,7 +269,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m model \u001b[38;5;241m=\u001b[39m onnx\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124myolov5_half_export.onnx\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m keras_model \u001b[38;5;241m=\u001b[39m \u001b[43monnx2keras\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43monnx_to_keras\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mimages\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[11], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m model_name \u001b[38;5;241m=\u001b[39m onnx\u001b[38;5;241m.\u001b[39mload_model(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mYOLOv5_three_gestures_int8_12.onnx\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m \u001b[43monnx2keras\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43monnx_to_keras\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mimages\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[1;32mc:\\Users\\perez\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\onnx2keras\\converter.py:175\u001b[0m, in \u001b[0;36monnx_to_keras\u001b[1;34m(onnx_model, input_names, input_shapes, name_policy, verbose, change_ordering)\u001b[0m\n\u001b[0;32m    172\u001b[0m     logger\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m... found all, continue\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    174\u001b[0m keras\u001b[38;5;241m.\u001b[39mbackend\u001b[38;5;241m.\u001b[39mset_image_data_format(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchannels_first\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m--> 175\u001b[0m \u001b[43mAVAILABLE_CONVERTERS\u001b[49m\u001b[43m[\u001b[49m\u001b[43mnode_type\u001b[49m\u001b[43m]\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    176\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnode\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    177\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnode_params\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    178\u001b[0m \u001b[43m    \u001b[49m\u001b[43mlayers\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    179\u001b[0m \u001b[43m    \u001b[49m\u001b[43mlambda_funcs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    180\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnode_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    181\u001b[0m \u001b[43m    \u001b[49m\u001b[43mkeras_names\u001b[49m\n\u001b[0;32m    182\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    183\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(keras_names, \u001b[38;5;28mlist\u001b[39m):\n\u001b[0;32m    184\u001b[0m     keras_names \u001b[38;5;241m=\u001b[39m keras_names[\u001b[38;5;241m0\u001b[39m]\n",
       "File \u001b[1;32mc:\\Users\\perez\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\onnx2keras\\convolution_layers.py:86\u001b[0m, in \u001b[0;36mconvert_conv\u001b[1;34m(node, params, layers, lambda_func, node_name, keras_name)\u001b[0m\n\u001b[0;32m     84\u001b[0m     logger\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPaddings exist, add ZeroPadding layer\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     85\u001b[0m     padding_name \u001b[38;5;241m=\u001b[39m keras_name \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_pad\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m---> 86\u001b[0m     padding_layer \u001b[38;5;241m=\u001b[39m \u001b[43mkeras\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlayers\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mZeroPadding2D\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     87\u001b[0m \u001b[43m        \u001b[49m\u001b[43mpadding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpadding\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     88\u001b[0m \u001b[43m        \u001b[49m\u001b[43mname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpadding_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     89\u001b[0m \u001b[43m        \u001b[49m\u001b[43mdata_format\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mchannels_first\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\n\u001b[0;32m     90\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     91\u001b[0m     layers[padding_name] \u001b[38;5;241m=\u001b[39m input_0 \u001b[38;5;241m=\u001b[39m padding_layer(input_0)\n\u001b[0;32m     93\u001b[0m W \u001b[38;5;241m=\u001b[39m W\u001b[38;5;241m.\u001b[39mtranspose(\u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m0\u001b[39m)\n",
       "File \u001b[1;32mc:\\Users\\perez\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\layers\\reshaping\\zero_padding2d.py:72\u001b[0m, in \u001b[0;36mZeroPadding2D.__init__\u001b[1;34m(self, padding, data_format, **kwargs)\u001b[0m\n\u001b[0;32m     71\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, padding\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m), data_format\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m---> 72\u001b[0m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     73\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata_format \u001b[38;5;241m=\u001b[39m backend\u001b[38;5;241m.\u001b[39mstandardize_data_format(data_format)\n\u001b[0;32m     74\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(padding, \u001b[38;5;28mint\u001b[39m):\n",
@@ -251,8 +280,8 @@
     }
    ],
    "source": [
-    "model = onnx.load('yolov5_half_export.onnx')\n",
-    "keras_model = onnx2keras.onnx_to_keras(model,['images'])"
+    "model_name = onnx.load_model('YOLOv5_three_gestures_int8_12.onnx')\n",
+    "onnx2keras.onnx_to_keras(model_name,['images'])"
    ]
   }
  ],
