Running yolo from an .onnx file

--- a/notebooks/Yolo test with ONNX file.ipynb
+++ b/notebooks/Yolo test with ONNX file.ipynb
@@ -30,6 +30,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2.dnn.readNetFromONNX(\"yolov5_half_export.onnx\").setPreferableTarget(cv2.dnn.DNN_TARGET_CPU_FP16)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -78,9 +87,10 @@
    "outputs": [],
    "source": [
     "def model(path):\n",
+    "    \n",
     "    net = cv2.dnn.readNetFromONNX(path)\n",
     "    net.setPreferableBackend(cv2.dnn.DNN_BACKEND_DEFAULT)\n",
-    "    net.setPreferableTarget(cv2.dnn.DNN_BACKEND_DEFAULT)\n",
+    "    net.setPreferableTarget(cv2.dnn.DNN_TARGET_CPU_FP16)\n",
     "    \n",
     "    return net\n",
     "    "
@@ -361,7 +371,355 @@
       "Total frames: 184\n",
       "Total frames: 185\n",
       "Total frames: 186\n",
-      "Total frames: 187\n"
+      "Total frames: 187\n",
+      "Total frames: 188\n",
+      "Total frames: 189\n",
+      "Total frames: 190\n",
+      "Total frames: 191\n",
+      "Total frames: 192\n",
+      "Total frames: 193\n",
+      "Total frames: 194\n",
+      "Total frames: 195\n",
+      "Total frames: 196\n",
+      "Total frames: 197\n",
+      "Total frames: 198\n",
+      "Total frames: 199\n",
+      "Total frames: 200\n",
+      "Total frames: 201\n",
+      "Total frames: 202\n",
+      "Total frames: 203\n",
+      "Total frames: 204\n",
+      "Total frames: 205\n",
+      "Total frames: 206\n",
+      "Total frames: 207\n",
+      "Total frames: 208\n",
+      "Total frames: 209\n",
+      "Total frames: 210\n",
+      "Total frames: 211\n",
+      "Total frames: 212\n",
+      "Total frames: 213\n",
+      "Total frames: 214\n",
+      "Total frames: 215\n",
+      "Total frames: 216\n",
+      "Total frames: 217\n",
+      "Total frames: 218\n",
+      "Total frames: 219\n",
+      "Total frames: 220\n",
+      "Total frames: 221\n",
+      "Total frames: 222\n",
+      "Total frames: 223\n",
+      "Total frames: 224\n",
+      "Total frames: 225\n",
+      "Total frames: 226\n",
+      "Total frames: 227\n",
+      "Total frames: 228\n",
+      "Total frames: 229\n",
+      "Total frames: 230\n",
+      "Total frames: 231\n",
+      "Total frames: 232\n",
+      "Total frames: 233\n",
+      "Total frames: 234\n",
+      "Total frames: 235\n",
+      "Total frames: 236\n",
+      "Total frames: 237\n",
+      "Total frames: 238\n",
+      "Total frames: 239\n",
+      "Total frames: 240\n",
+      "Total frames: 241\n",
+      "Total frames: 242\n",
+      "Total frames: 243\n",
+      "Total frames: 244\n",
+      "Total frames: 245\n",
+      "Total frames: 246\n",
+      "Total frames: 247\n",
+      "Total frames: 248\n",
+      "Total frames: 249\n",
+      "Total frames: 250\n",
+      "Total frames: 251\n",
+      "Total frames: 252\n",
+      "Total frames: 253\n",
+      "Total frames: 254\n",
+      "Total frames: 255\n",
+      "Total frames: 256\n",
+      "Total frames: 257\n",
+      "Total frames: 258\n",
+      "Total frames: 259\n",
+      "Total frames: 260\n",
+      "Total frames: 261\n",
+      "Total frames: 262\n",
+      "Total frames: 263\n",
+      "Total frames: 264\n",
+      "Total frames: 265\n",
+      "Total frames: 266\n",
+      "Total frames: 267\n",
+      "Total frames: 268\n",
+      "Total frames: 269\n",
+      "Total frames: 270\n",
+      "Total frames: 271\n",
+      "Total frames: 272\n",
+      "Total frames: 273\n",
+      "Total frames: 274\n",
+      "Total frames: 275\n",
+      "Total frames: 276\n",
+      "Total frames: 277\n",
+      "Total frames: 278\n",
+      "Total frames: 279\n",
+      "Total frames: 280\n",
+      "Total frames: 281\n",
+      "Total frames: 282\n",
+      "Total frames: 283\n",
+      "Total frames: 284\n",
+      "Total frames: 285\n",
+      "Total frames: 286\n",
+      "Total frames: 287\n",
+      "Total frames: 288\n",
+      "Total frames: 289\n",
+      "Total frames: 290\n",
+      "Total frames: 291\n",
+      "Total frames: 292\n",
+      "Total frames: 293\n",
+      "Total frames: 294\n",
+      "Total frames: 295\n",
+      "Total frames: 296\n",
+      "Total frames: 297\n",
+      "Total frames: 298\n",
+      "Total frames: 299\n",
+      "Total frames: 300\n",
+      "Total frames: 301\n",
+      "Total frames: 302\n",
+      "Total frames: 303\n",
+      "Total frames: 304\n",
+      "Total frames: 305\n",
+      "Total frames: 306\n",
+      "Total frames: 307\n",
+      "Total frames: 308\n",
+      "Total frames: 309\n",
+      "Total frames: 310\n",
+      "Total frames: 311\n",
+      "Total frames: 312\n",
+      "Total frames: 313\n",
+      "Total frames: 314\n",
+      "Total frames: 315\n",
+      "Total frames: 316\n",
+      "Total frames: 317\n",
+      "Total frames: 318\n",
+      "Total frames: 319\n",
+      "Total frames: 320\n",
+      "Total frames: 321\n",
+      "Total frames: 322\n",
+      "Total frames: 323\n",
+      "Total frames: 324\n",
+      "Total frames: 325\n",
+      "Total frames: 326\n",
+      "Total frames: 327\n",
+      "Total frames: 328\n",
+      "Total frames: 329\n",
+      "Total frames: 330\n",
+      "Total frames: 331\n",
+      "Total frames: 332\n",
+      "Total frames: 333\n",
+      "Total frames: 334\n",
+      "Total frames: 335\n",
+      "Total frames: 336\n",
+      "Total frames: 337\n",
+      "Total frames: 338\n",
+      "Total frames: 339\n",
+      "Total frames: 340\n",
+      "Total frames: 341\n",
+      "Total frames: 342\n",
+      "Total frames: 343\n",
+      "Total frames: 344\n",
+      "Total frames: 345\n",
+      "Total frames: 346\n",
+      "Total frames: 347\n",
+      "Total frames: 348\n",
+      "Total frames: 349\n",
+      "Total frames: 350\n",
+      "Total frames: 351\n",
+      "Total frames: 352\n",
+      "Total frames: 353\n",
+      "Total frames: 354\n",
+      "Total frames: 355\n",
+      "Total frames: 356\n",
+      "Total frames: 357\n",
+      "Total frames: 358\n",
+      "Total frames: 359\n",
+      "Total frames: 360\n",
+      "Total frames: 361\n",
+      "Total frames: 362\n",
+      "Total frames: 363\n",
+      "Total frames: 364\n",
+      "Total frames: 365\n",
+      "Total frames: 366\n",
+      "Total frames: 367\n",
+      "Total frames: 368\n",
+      "Total frames: 369\n",
+      "Total frames: 370\n",
+      "Total frames: 371\n",
+      "Total frames: 372\n",
+      "Total frames: 373\n",
+      "Total frames: 374\n",
+      "Total frames: 375\n",
+      "Total frames: 376\n",
+      "Total frames: 377\n",
+      "Total frames: 378\n",
+      "Total frames: 379\n",
+      "Total frames: 380\n",
+      "Total frames: 381\n",
+      "Total frames: 382\n",
+      "Total frames: 383\n",
+      "Total frames: 384\n",
+      "Total frames: 385\n",
+      "Total frames: 386\n",
+      "Total frames: 387\n",
+      "Total frames: 388\n",
+      "Total frames: 389\n",
+      "Total frames: 390\n",
+      "Total frames: 391\n",
+      "Total frames: 392\n",
+      "Total frames: 393\n",
+      "Total frames: 394\n",
+      "Total frames: 395\n",
+      "Total frames: 396\n",
+      "Total frames: 397\n",
+      "Total frames: 398\n",
+      "Total frames: 399\n",
+      "Total frames: 400\n",
+      "Total frames: 401\n",
+      "Total frames: 402\n",
+      "Total frames: 403\n",
+      "Total frames: 404\n",
+      "Total frames: 405\n",
+      "Total frames: 406\n",
+      "Total frames: 407\n",
+      "Total frames: 408\n",
+      "Total frames: 409\n",
+      "Total frames: 410\n",
+      "Total frames: 411\n",
+      "Total frames: 412\n",
+      "Total frames: 413\n",
+      "Total frames: 414\n",
+      "Total frames: 415\n",
+      "Total frames: 416\n",
+      "Total frames: 417\n",
+      "Total frames: 418\n",
+      "Total frames: 419\n",
+      "Total frames: 420\n",
+      "Total frames: 421\n",
+      "Total frames: 422\n",
+      "Total frames: 423\n",
+      "Total frames: 424\n",
+      "Total frames: 425\n",
+      "Total frames: 426\n",
+      "Total frames: 427\n",
+      "Total frames: 428\n",
+      "Total frames: 429\n",
+      "Total frames: 430\n",
+      "Total frames: 431\n",
+      "Total frames: 432\n",
+      "Total frames: 433\n",
+      "Total frames: 434\n",
+      "Total frames: 435\n",
+      "Total frames: 436\n",
+      "Total frames: 437\n",
+      "Total frames: 438\n",
+      "Total frames: 439\n",
+      "Total frames: 440\n",
+      "Total frames: 441\n",
+      "Total frames: 442\n",
+      "Total frames: 443\n",
+      "Total frames: 444\n",
+      "Total frames: 445\n",
+      "Total frames: 446\n",
+      "Total frames: 447\n",
+      "Total frames: 448\n",
+      "Total frames: 449\n",
+      "Total frames: 450\n",
+      "Total frames: 451\n",
+      "Total frames: 452\n",
+      "Total frames: 453\n",
+      "Total frames: 454\n",
+      "Total frames: 455\n",
+      "Total frames: 456\n",
+      "Total frames: 457\n",
+      "Total frames: 458\n",
+      "Total frames: 459\n",
+      "Total frames: 460\n",
+      "Total frames: 461\n",
+      "Total frames: 462\n",
+      "Total frames: 463\n",
+      "Total frames: 464\n",
+      "Total frames: 465\n",
+      "Total frames: 466\n",
+      "Total frames: 467\n",
+      "Total frames: 468\n",
+      "Total frames: 469\n",
+      "Total frames: 470\n",
+      "Total frames: 471\n",
+      "Total frames: 472\n",
+      "Total frames: 473\n",
+      "Total frames: 474\n",
+      "Total frames: 475\n",
+      "Total frames: 476\n",
+      "Total frames: 477\n",
+      "Total frames: 478\n",
+      "Total frames: 479\n",
+      "Total frames: 480\n",
+      "Total frames: 481\n",
+      "Total frames: 482\n",
+      "Total frames: 483\n",
+      "Total frames: 484\n",
+      "Total frames: 485\n",
+      "Total frames: 486\n",
+      "Total frames: 487\n",
+      "Total frames: 488\n",
+      "Total frames: 489\n",
+      "Total frames: 490\n",
+      "Total frames: 491\n",
+      "Total frames: 492\n",
+      "Total frames: 493\n",
+      "Total frames: 494\n",
+      "Total frames: 495\n",
+      "Total frames: 496\n",
+      "Total frames: 497\n",
+      "Total frames: 498\n",
+      "Total frames: 499\n",
+      "Total frames: 500\n",
+      "Total frames: 501\n",
+      "Total frames: 502\n",
+      "Total frames: 503\n",
+      "Total frames: 504\n",
+      "Total frames: 505\n",
+      "Total frames: 506\n",
+      "Total frames: 507\n",
+      "Total frames: 508\n",
+      "Total frames: 509\n",
+      "Total frames: 510\n",
+      "Total frames: 511\n",
+      "Total frames: 512\n",
+      "Total frames: 513\n",
+      "Total frames: 514\n",
+      "Total frames: 515\n",
+      "Total frames: 516\n",
+      "Total frames: 517\n",
+      "Total frames: 518\n",
+      "Total frames: 519\n",
+      "Total frames: 520\n",
+      "Total frames: 521\n",
+      "Total frames: 522\n",
+      "Total frames: 523\n",
+      "Total frames: 524\n",
+      "Total frames: 525\n",
+      "Total frames: 526\n",
+      "Total frames: 527\n",
+      "Total frames: 528\n",
+      "Total frames: 529\n",
+      "Total frames: 530\n",
+      "Total frames: 531\n",
+      "Total frames: 532\n",
+      "Total frames: 533\n",
+      "Total frames: 534\n",
+      "Total frames: 535\n"
      ]
     },
     {
