--- a/notebooks/Yolo on PYNQ.ipynb
+++ b/notebooks/Yolo on PYNQ.ipynb
@@ -27,7 +27,8 @@
     }
    ],
    "source": [
-    "%cd ../../ # notebook in a weird place so need to get to where the weights, .cfg and obj.name files are.\n",
+    "%cd ../\n",
+    "%cd weights # notebook in a weird place so need to get to where the weights, .cfg and obj.name files are.\n",
     "# Dont run if files are in the same directory as the notebook"
    ]
   },
@@ -39,7 +40,7 @@
    "outputs": [],
    "source": [
     "# loads the weights and .cfg to run yolo\n",
-    "net = cv2.dnn.readNet('yolov3-tiny-custom_best (2).weights','yolov3-tiny-custom.cfg')"
+    "net = cv2.dnn.readNet('yolov3_5_gestures.weights','yolov3_5_gestures.cfg')"
    ]
   },
   {
@@ -50,7 +51,7 @@
    "outputs": [],
    "source": [
     "classes = [] # Gets our Object names\n",
-    "with open(\"obj.names\", \"r\") as f:\n",
+    "with open(\"obj_5_gestures.names\", \"r\") as f:\n",
     "    classes = [line.strip() for line in f.readlines()]"
    ]
   },
@@ -63,27 +64,9 @@
    "source": [
     "# Additional libraries needed\n",
     "import numpy as np\n",
-    "import time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "610976ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import time\n",
     "layer_names = net.getLayerNames()\n",
-    "output_layers = [layer_names[i-1] for i in net.getUnconnectedOutLayers()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "fba829bf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "output_layers = [layer_names[i-1] for i in net.getUnconnectedOutLayers()]\n",
     "colors = np.random.uniform(0, 255, size=(len(classes), 3))"
    ]
   },
@@ -137,16 +120,8 @@
     "Mode = VideoMode(640,480,24)\n",
     "hdmi_out = base.video.hdmi_out\n",
     "hdmi_out.configure(Mode,PIXEL_BGR)\n",
-    "hdmi_out.start()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "587ba1eb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "hdmi_out.start()\n",
+    "\n",
     "# monitor (output) frame buffer size\n",
     "frame_out_w = 1920\n",
     "frame_out_h = 1080\n",
